<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/hintTv"
        style="@style/WrapStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/Margin5Dp"
        android:text="@string/about_copyright"
        android:textColor="@color/HintTextColor"
        android:textSize="@dimen/TextSize10Sp" />

    <LinearLayout
        android:id="@+id/buttons"
        style="@style/WrapStyle"
        android:layout_above="@id/hintTv"
        android:layout_centerHorizontal="true" >

        <TextView
            android:visibility="gone"
            android:id="@+id/menu_protocolTv1"
            style="@style/WrapStyle"
            android:text="@string/about_privacy1"
            android:textColor="@color/ButtonTextColor"
            android:textSize="@dimen/TextSize12Sp" />

        <TextView
            android:id="@+id/menu_websiteTv"
            style="@style/WrapStyle"
            android:text="@string/about_website"
            android:visibility="gone"
            android:textColor="@color/ButtonTextColor"
            android:textSize="@dimen/TextSize12Sp" />

        <View
            android:visibility="gone"
            style="@style/VerticalLine"
            android:layout_marginLeft="@dimen/Margin5Dp"
            android:layout_marginRight="@dimen/Margin5Dp"
            android:background="@color/ButtonTextColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons"
        android:layout_alignEnd="@id/hintTv"
        android:layout_alignLeft="@id/hintTv"
        android:layout_alignRight="@id/hintTv"
        android:layout_alignStart="@id/hintTv"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/menu_versionTv"
            style="@style/WrapStyle"
            android:layout_margin="@dimen/Margin5Dp"
            android:drawableLeft="@mipmap/logo"
            android:drawablePadding="@dimen/Margin5Dp"
            android:drawableStart="@mipmap/logo"
            android:gravity="bottom" />

        <TextView
            android:id="@+id/menu_historyTv"
            style="@style/MenuTextStyle"
            android:text="@string/menu_history" />

        <TextView
            android:id="@+id/menu_guidTv"
            style="@style/MenuTextStyle"
            android:text="@string/menu_guid" />

        <TextView
            android:visibility="gone"
            android:id="@+id/menu_feedbackTv"
            style="@style/MenuTextStyle"
            android:text="@string/menu_feedback" />

        <TextView
            android:id="@+id/menu_reviewTv"
            style="@style/MenuTextStyle"
            android:text="@string/menu_review" />

        <TextView
            android:id="@+id/menu_settingTv"
            style="@style/MenuTextStyle"
            android:text="@string/menu_setting" />

        <TextView
            android:id="@+id/menu_aboutTv"
            style="@style/MenuTextStyle"
            android:layout_marginTop="@dimen/Margin5Dp"
            android:text="@string/menu_about" />
        <TextView
            android:id="@+id/menu_protocolTv"
            style="@style/MenuTextStyle"
            android:layout_marginTop="@dimen/Margin5Dp"
            android:text="@string/about_privacy" />

    </LinearLayout>

</RelativeLayout>