<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:fitsSystemWindows="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                style="@style/WrapStyle"
                android:layout_marginBottom="@dimen/Margin10Dp"
                android:layout_marginTop="@dimen/Margin20Dp"
                android:contentDescription="@string/empty"
                android:src="@mipmap/big_logo" />

            <TextView
                android:id="@+id/about_versionTv"
                style="@style/WrapStyle" />

            <View
                style="@style/HorizontalLine"
                android:layout_marginTop="@dimen/Margin10Dp" />

            <TextView
                android:id="@+id/about_authorTv"
                style="@style/TextButtonStyle"
                android:text="@string/about_author" />

            <View
                style="@style/HorizontalLine"
                android:visibility="gone" />

            <TextView
                android:id="@+id/about_appraiseTv"
                style="@style/TextButtonStyle"
                android:text="@string/about_appraise"
                android:visibility="gone" />

            <View
                style="@style/HorizontalLine"
                android:visibility="gone" />

            <TextView
                android:id="@+id/about_suggestionTv"
                style="@style/TextButtonStyle"
                android:text="@string/about_suggestion"
                android:visibility="gone" />

            <View style="@style/HorizontalLine" />
        </LinearLayout>

        <TextView
            android:id="@+id/about_hintTv"
            style="@style/WrapStyle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/Margin5Dp"
            android:text="@string/about_copyright"
            android:textColor="@color/HintTextColor"
            android:textSize="@dimen/TextSize10Sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/about_hintTv"
            android:gravity="center" >

            <TextView
                android:id="@+id/about_websiteTv"
                style="@style/WrapStyle"
                android:text="@string/about_website"
                android:textColor="@color/ButtonTextColor"
                android:textSize="@dimen/TextSize12Sp" />

            <View
                style="@style/VerticalLine"
                android:layout_marginLeft="@dimen/Margin5Dp"
                android:layout_marginRight="@dimen/Margin5Dp"
                android:background="@color/ButtonTextColor" />

            <TextView
                android:id="@+id/about_privacyTv"
                style="@style/WrapStyle"
                android:text="@string/about_privacy"
                android:textColor="@color/ButtonTextColor"
                android:textSize="@dimen/TextSize12Sp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>