<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true" >

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <HorizontalScrollView
                    android:id="@+id/horizontalView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scrollbars="@null" >

                    <LinearLayout
                        android:id="@+id/titleLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal" />
                </HorizontalScrollView>

                <ImageView
                    android:layout_width="@dimen/Margin50Dp"
                    android:layout_height="@dimen/Margin35Dp"
                    android:background="@drawable/button_text_bg"
                    android:contentDescription="@string/empty"
                    android:scaleType="center"
                    android:src="@mipmap/btn_down"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center_horizontal"
            android:background="@android:color/white" 
            android:orientation="vertical" >

            <TextView
                android:id="@+id/menu_aboutTv"
                android:layout_marginTop="@dimen/Margin20Dp"
                style="@style/MenuTextStyle"
                android:text="@string/menu_about" />

            <TextView
                android:id="@+id/menu_guidTv"
                style="@style/MenuTextStyle"
                android:text="@string/menu_guid" />
            <TextView
                android:id="@+id/menu_historyTv"
                style="@style/MenuTextStyle"
                android:text="@string/menu_history" />
        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>